--- a/config/instance_profiles/app/staging/nginx.conf
+++ b/config/instance_profiles/app/staging/nginx.conf
@@ -5,7 +5,7 @@ server {
   listen localhost:3001;
   listen 127.0.0.1:3001;
   
-  server_name  lockbox-dev.barackobama.com lockbox-dev.dnc.org;
+  server_name  lockbox.barackobama.com lockbox.dnc.org;
 
   #add expires header for static content
   location ~* \.(js|css|jpg|jpeg|gif|png)$ {
