host name on staging is lockbox-dev.dnc.org

--- a/config/instance_profiles/app/staging/nginx.conf
+++ b/config/instance_profiles/app/staging/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  api-dev.barackobama.com;
+    server_name  lockbox-dev.dnc.org;
 
     #include stageauth;
 
