forgot the lockbox.yml again

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,7 @@ db/schema.*
 config/database.yml
 config/lockbox.yml
 test/tmp
-<<<<<<< HEAD
 .idea/*
-=======
 lockbox_middleware.gemspec
 pkg/
->>>>>>> 644413ab19f27e98bc29f490d16346eb460d9f3d
+.idea/*
