--- a/config/lockbox.yml.example
+++ b/config/lockbox.yml.example
@@ -1,16 +1,16 @@
 --- 
 production: 
   base_uri: http://lockbox.foo.org
-  application_name: 'foo'
+  application_name: test
 development: 
   base_uri: http://localhost:3001
-  application_name: 'foo'
+  application_name: test
 cucumber: 
   base_uri: http://localhost:3001
-  application_name: 'foo'
+  application_name: test
 test: 
   base_uri: http://localhost:3001
-  application_name: 'foo'  
+  application_name: test  
 all:
   protect_paths: 
     - ^/api/
