cleaned up lockbox.yml; removed production config

--- a/config/lockbox.yml
+++ b/config/lockbox.yml
@@ -1,16 +1,13 @@
 --- 
-production: 
-  base_uri: http://lockbox.dnc.org
-  application_name: test
-development:
+defaults: &defaults
   base_uri: http://localhost:3001
   application_name: test
-cucumber: 
-  base_uri: http://localhost:3001
-  application_name: test
-test: 
-  base_uri: http://localhost:3001
-  application_name: test  
-all:
   protect_paths: 
     - ^/api/
+
+development:
+  <<: *defaults
+cucumber: 
+  <<: *defaults
+test: 
+  <<: *defaults
