--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   adapter: postgresql
   host: localhost
-  database: lockbox
+  database: lockbox_development
 
 development:
   <<: *defaults
