--- a/config/lockbox.yml
+++ b/config/lockbox.yml
@@ -1,13 +1,21 @@
 --- 
-defaults: &defaults
+development: 
+  base_uri: http://localhost:3001
+  application_name: test
+  protect_paths: &id001 
+    - ^/api/
+defaults: 
+  base_uri: http://localhost:3001
+  application_name: test
+  protect_paths: *id001
+cucumber: 
+  base_uri: http://localhost:3001
+  application_name: test
+  protect_paths: *id001
+test: 
   base_uri: http://localhost:3001
   application_name: test
   protect_paths: 
-    - ^/api/
-
-development:
-  <<: *defaults
-cucumber: 
-  <<: *defaults
-test: 
-  <<: *defaults
+  - ^/api/
+  - ^/foo/bar/
+  - /lookup/?$
