Revert "first crack at getting hmac caching working, and lots of refactoring"
This reverts commit c0d3797640ee486b5ee718764782d2b75fa001ec.

not quite ready for prime-time yet, this should be on a topic branch for now

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   adapter: postgresql
   host: localhost
-  database: lockbox_development
+  database: lockbox
 
 development:
   <<: *defaults
